# hippo-cli

./: Cargo.toml  README.md
.github/workflows/: build.yaml  release.yaml
src/: bindle_pusher.rs  bindle_utils.rs  bindle_writer.rs  build_condition.rs  client.rs  expander.rs  hippo_notifier.rs  hippofacts.rs  main.rs  warnings.rs
src/bindle/: client.rs  mod.rs  pusher.rs  writer.rs
src/cli/: mod.rs
src/cli/commands/: app.rs  auth.rs  bindle.rs  certificate.rs  channel.rs  environment_variable.rs  mod.rs  new.rs  revision.rs
src/command/: mod.rs  newhippo.rs  upload.rs
src/hippo/: client.rs  mod.rs
src/invoice/: bindle_spec.rs  label.rs  mod.rs  parcel.rs
testdata/app1/: HIPPOFACTS
testdata/app2/: HIPPOFACTS
testdata/app2/scripts/: two.js
testdata/app2/styles/: whizz.css
testdata/app2/wasm/: empty-assets.wasm  no-assets.wasm  no-directory.wasm  no-match.wasm  other-wasms.wasm  specific-file-missing.wasm
testdata/bad_version/: HIPPOFACTS
testdata/cond1/: HIPPOFACTS
testdata/docs-example/: HIPPOFACTS
testdata/external1/: HIPPOFACTS
testdata/external2/: HIPPOFACTS
testdata/external3/: HIPPOFACTS  thumbnails.db
testdata/external_bad/: HIPPOFACTS
testdata/lib1/: HIPPOFACTS
testdata/lib1/gallery/: images.db  thumbnails.db
testdata/lib1/wasm/: gallery.wasm  server.wasm
testdata/nesttest/: HIPPOFACTS
testdata/nesttest/assets/scripts/: justsome.json  real.js
testdata/nesttest/assets/styles/css/: suspicious.css
testdata/nesttest/assets/styles/sass/: iffy.sass
