[package]
name = "hippo"
version = "0.9.0"
authors = ["Ivan Towlson <itowlson@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bindle = { version = "0.5.0", features = ["client"], default-features = false }
chrono = "0.4"
clap = { version = "3.0.0-beta.4" }
colored = "2.0.0"
dunce = "1.0"
futures = "0.3.14"
glob = "0.3.0"
hippo-openapi = "0.1"
itertools = "0.10.0"
mime_guess = { version = "2.0" }
regex = "1.5.4"
reqwest = { version = "0.11", features = ["stream"] }
semver = { version = "0.11", features = ["serde"] }
serde = {version = "1.0", features = ["derive"]}
sha2 = "0.9"
tokio = {version = "1.8", features = ["time"]}
toml = "0.5"
