[package]
name = "hippo"
version = "0.10.0"
authors = [
    "Ivan Towlson <ivan.towlson@fermyon.com>",
    "Matt Fisher <matt.fisher@fermyon.com>"
]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bindle = { version = "0.5.0", features = ["client"], default-features = false }
chrono = "0.4"
clap = { version = "3.0", features = ["derive"] }
colored = "2.0.0"
dialoguer = "0.9"
dirs = "4.0"
dunce = "1.0"
env_logger = "0.9"
futures = "0.3.14"
glob = "0.3.0"
hippo-openapi = "0.4"
itertools = "0.10.0"
log = "0.4"
mime_guess = { version = "2.0" }
regex = "1.5.4"
reqwest = { version = "0.11", features = ["stream"] }
semver = { version = "0.11", features = ["serde"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.9"
tokio = {version = "1.8", features = ["time"]}
toml = "0.5"
