[package]
name = "hippo"
version = "0.13.1"
authors = [
    "Ivan Towlson <ivan.towlson@fermyon.com>",
    "Matt Fisher <matt.fisher@fermyon.com>"
]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "3.0", features = ["derive", "env"] }
colored = "2.0.0"
dialoguer = "0.9"
dirs = "4.0"
dunce = "1.0"
env_logger = "0.9"
futures = "0.3.14"
glob = "0.3.0"
hippo-openapi = "0.9"
itertools = "0.10.0"
log = "0.4"
mime_guess = { version = "2.0" }
regex = "1.5"
reqwest = { version = "0.11", features = ["stream"] }
semver = { version = "0.11", features = ["serde"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.9"
tokio = {version = "1.17", features = ["full"]}
toml = "0.5"
